# Sea5kgPython3Scripting_editorplugin

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  Sea5kgPython3Scripting_editorplugin_linux_float.project  Sea5kgPython3Scripting_editorplugin_windows_float.project  build_plugin.py  build_plugin.sh  generate_pytypeobjects.sh  pack_plugin.py  pack_plugin.sh  run_editor_debug.sh  unigine-editor-python3scripting_linux_float.project  unigine-editor-python3scripting_windows_double.project  unigine-editor-python3scripting_windows_float.project  version
Python3Scripting_examples/materials_assetmanager_test/: main.py  python3script.json
Python3Scripting_examples/materials_load_material/: main.py  python3script.json
Python3Scripting_examples/materials_shadows_disable/: main.py  python3script.json
Python3Scripting_examples/materials_shadows_enable/: main.py  python3script.json
Python3Scripting_examples/nodes_assetmanager_is_asset/: main.py  python3script.json
Python3Scripting_examples/nodes_spin_example/: main.py  python3script.json
Python3Scripting_examples/tools_create_mesh/: main.py  python3script.json
Python3Scripting_examples/tools_pip_install/: main.py  python3script.json
PythonWrapperGenerator/: .gitignore  gen_editor_wrapper.py  include_all.h  run_castxml.sh
PythonWrapperGenerator/pytypesobjects/: python3_pytypeobjects.cpp  python3_unigine_assetmanager.cpp  python3_unigine_mat4.cpp  (+25 more)
UnigineEditorPlugin_Python3Scripting/: CMakeLists.txt  UnigineEditorPlugin_Python3Scripting.json.in  build_python.bat  build_python.sh
UnigineEditorPlugin_Python3Scripting/Python-3.10.1/PCbuild/: _asyncio.vcxproj  python3dll.vcxproj  winsound.vcxproj  xxlimited.vcxproj  xxlimited_35.vcxproj
UnigineEditorPlugin_Python3Scripting/QCodeEditor/: CMakeLists.txt
UnigineEditorPlugin_Python3Scripting/cmake/: FindEditor.cmake  FindEngine.cmake  Unigine.cmake  UnigineCompilerFlags.cmake  UnigineFunctions.cmake  UnigineVersion.cmake
UnigineEditorPlugin_Python3Scripting/cmake/modules/: FindEditor.cmake  FindEngine.cmake
UnigineEditorPlugin_Python3Scripting/generate_pytypeobjects/: run.py
UnigineEditorPlugin_Python3Scripting/generate_pytypeobjects/genhelper/: __init__.py  cpp_header_parser_for_unigine.py  header_writer.py  source_writer.py
UnigineEditorPlugin_Python3Scripting/include/: CMakeLists.txt  UnigineEditor.h
UnigineEditorPlugin_Python3Scripting/include/editor/: Actions.h  AssetDialogs.h  AssetManager.h  Constants.h  EditorGlobal.h  EngineGuiWindow.h  Plugin.h  PluginInfo.h  PluginManager.h  RenderWindow.h  Selection.h  Selector.h  SettingManager.h  Undo.h  WindowManager.h
UnigineEditorPlugin_Python3Scripting/src/: CollectorMenuSelected.cpp  CollectorMenuSelected.h  EditExtensionDialog.cpp  EditExtensionDialog.h  FileUnexpy3.cpp  FileUnexpy3.h  ModelExtension.cpp  ModelExtension.h  PythonExecutor.cpp  PythonExecutor.h  UnigineEditorPlugin_Python3Scripting.cpp  UnigineEditorPlugin_Python3Scripting.h  run_python_in_thread.cpp  run_python_in_thread.h
UnigineEditorPlugin_Python3Scripting/src/dialogs/: EditExtensionDialog.cpp  EditExtensionDialog.h
UnigineEditorPlugin_Python3Scripting/src/format_unexpy3/: FileUnexpy3.cpp  FileUnexpy3.h
UnigineEditorPlugin_Python3Scripting/src/python3_wrapper/: python3_unigine_stderr.h  python3_unigine_stdout.h  python3_wrapper.h  unigine_python_material.h  unigine_python_stderr.cpp  unigine_python_stderr.h  unigine_python_stdout.h  unigine_python_unigine_lib.cpp  unigine_python_unigine_lib.h
UnigineEditorPlugin_Python3Scripting/src/python3_wrapper/pytypesobjects/: python3_pytypeobjects.cpp  python3_pytypeobjects.h  python3_unigine_material.cpp  python3_unigine_material.h  python3_unigine_material_gen.cpp  python3_unigine_node.cpp  python3_unigine_node.h  python3_unigine_node_gen.cpp
UnigineEditorPlugin_Python3Scripting/src/unigine_python_wrapper/: unigine_python_material.cpp  unigine_python_material.h  unigine_python_stderr.h  unigine_python_stdout.cpp  unigine_python_stdout.h  unigine_python_unigine_lib.cpp  unigine_python_unigine_lib.h  unigine_python_wrapper_base.h
include/: Unigine.h  UnigineApp.h  UnigineApp.xml  UnigineAsyncQueue.h  UnigineAsyncQueue.xml  UnigineBase.h  UnigineBiMap.h  UnigineBiMap.xml  UnigineBounds.h  UnigineBounds.xml  UnigineCIGIConnector.xml  UnigineCallback.h  UnigineCamera.h  UnigineCamera.xml  UnigineChecksum.h  UnigineChecksum.xml  UnigineComponentSystem.h  UnigineComponentSystem.xml  UnigineCompress.h  UnigineCompress.xml  UnigineConfig.h  UnigineConfig.xml  UnigineConsole.h  UnigineConsole.xml  UnigineControls.h  UnigineControls.xml  UnigineCurve2d.h  UnigineCurve2d.xml  UnigineCustomApp.xml  UnigineCustomSystemProxy.h  UnigineCustomSystemProxy.xml  UnigineDISConnector.xml  UnigineDecals.h  UnigineDecals.xml  UnigineDir.h  UnigineDir.xml  UnigineDisplays.h  UnigineDisplays.xml  UnigineEditor.h  UnigineEditor.xml  (+232 more)
source/plugins/Sea5Kg/Python3Scripting/: CMakeLists.txt  Sea5kgPython3Scripting_editorplugin.json.in  UnigineEditorPlugin_Python3Scripting.json.in  build_python.bat  build_python.sh
source/plugins/Sea5Kg/Python3Scripting/Python-3.10.1/PCbuild/: regen.targets
source/plugins/Sea5Kg/Python3Scripting/src/: CollectorMenuSelected.cpp  ModelExtension.cpp  PythonExecutor.cpp  Sea5kgPython3Scripting_editorplugin.h  UnigineEditorPlugin_Python3Scripting.cpp  UnigineEditorPlugin_Python3Scripting.h  run_python_in_thread.cpp  run_python_in_thread.h
source/plugins/Sea5Kg/Python3Scripting/src/dialogs/: CreateExtensionDialog.cpp  EditExtensionDialog.cpp  EditExtensionDialog.h  ManageScriptsDialog.cpp  ManageScriptsDialog.h
source/plugins/Sea5Kg/Python3Scripting/src/python3_wrapper/: python3_unigine_lib.cpp  python3_unigine_stderr.cpp
source/plugins/Sea5Kg/Python3Scripting/src/python3_wrapper/pytypesobjects/: python3_pytypeobjects.cpp  python3_unigine_assetmanager.cpp  python3_unigine_material.cpp  python3_unigine_material_gen.cpp  python3_unigine_materials.cpp  python3_unigine_node.cpp  python3_unigine_node.h  python3_unigine_node_gen.cpp  python3_unigine_uguid.cpp  python3_unigine_uguid.h
(+126 files in other folders)
